[package]
name = "btc"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
rand = "0.9.0"
sha2 = "0.11.0-pre.4"
rfc6979 = "0.5.0-pre.4"
hex = "0.4.3"
ripemd = "0.2.0-pre.4"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
dotenv = "0.15.0"